# perform

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml  security.yml
src/: bench.rs  db.rs  lib.rs  main.rs  results.rs
