[package]
name = "perform"
version = "0.1.0"
authors = ["Luc Perkins <lucperkins@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
sqlx = { version = "0.5.1", features = ["chrono", "json", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.24"
serde_json = "1.0.63"
indoc = "1.0.3"
chrono = "0.4.19"
average = "0.10.6"
