[package]
name = "perform"
version = "0.1.0"
authors = ["Luc Perkins <lucperkins@gmail.com>"]
edition = "2018"

[dependencies]
average = "0.10.6"
chrono = "0.4.19"
indoc = "1.0.3"
serde_json = "1.0.63"
sqlx = { version = "0.5.1", features = ["chrono", "json", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.24"
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }
